Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32VB.BAS

Public Declare Function C13_ExtDoutWr Lib "C13W32.DLL" Alias "_C13_ExtDoutWr@8" (ByVal doutval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_FileClose Lib "C13W32.DLL" Alias "_C13_FileClose@4" (ByRef handle As Long) As Long
Public Declare Function C13_FileErr Lib "C13W32.DLL" Alias "_C13_FileErr@0" () As Long
Public Declare Function C13_FileErrClear Lib "C13W32.DLL" Alias "_C13_FileErrClear@0" () As Long
Public Declare Function C13_FileErrSet Lib "C13W32.DLL" Alias "_C13_FileErrSet@0" () As Long
Public Declare Function C13_FileOpenRead Lib "C13W32.DLL" Alias "_C13_FileOpenRead@4" (ByRef filename As String) As Long
Public Declare Function C13_FileOpenWrite Lib "C13W32.DLL" Alias "_C13_FileOpenWrite@4" (ByRef filename As String) As Long
Public Declare Function C13_FileRead Lib "C13W32.DLL" Alias "_C13_FileRead@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function C13_FileSeek Lib "C13W32.DLL" Alias "_C13_FileSeek@8" (ByRef handle As Long, ByVal offset As Long) As Long
Public Declare Function C13_FileTell Lib "C13W32.DLL" Alias "_C13_FileTell@4" (ByRef handle As Long) As Long
Public Declare Function C13_FileWrite Lib "C13W32.DLL" Alias "_C13_FileWrite@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function C13_GetHigh Lib "C13W32.DLL" Alias "_C13_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function C13_GetLow Lib "C13W32.DLL" Alias "_C13_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function C13_GetOff Lib "C13W32.DLL" Alias "_C13_GetOff@4" (ByRef valptr As Long) As Integer
Public Declare Function C13_GetSeg Lib "C13W32.DLL" Alias "_C13_GetSeg@4" (ByRef valptr As Long) As Integer
Public Declare Function C13_GlobalRdW Lib "C13W32.DLL" Alias "_C13_GlobalRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_GlobalWrW Lib "C13W32.DLL" Alias "_C13_GlobalWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HandleClose Lib "C13W32.DLL" Alias "_C13_HandleClose@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HandleDel Lib "C13W32.DLL" Alias "_C13_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HandleIns Lib "C13W32.DLL" Alias "_C13_HandleIns@16" (ByRef cardname As String, ByVal cardnum As Long, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function C13_HandleOkay Lib "C13W32.DLL" Alias "_C13_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HandleOpen Lib "C13W32.DLL" Alias "_C13_HandleOpen@12" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HandleOpenDOS Lib "C13W32.DLL" Alias "" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HandleOpenWin Lib "C13W32.DLL" Alias "_C13_HandleOpenWin@12" (ByRef cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HandleVer Lib "C13W32.DLL" Alias "_C13_HandleVer@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HeapAlloc Lib "C13W32.DLL" Alias "_C13_HeapAlloc@8" (ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HeapAllocAll Lib "C13W32.DLL" Alias "_C13_HeapAllocAll@8" (ByRef wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HeapAllocAllDPM Lib "C13W32.DLL" Alias "_C13_HeapAllocAllDPM@8" (ByRef wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HeapAllocDPM Lib "C13W32.DLL" Alias "_C13_HeapAllocDPM@8" (ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HeapAllocEx Lib "C13W32.DLL" Alias "_C13_HeapAllocEx@12" (ByVal configval As Integer, ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HeapWipe Lib "C13W32.DLL" Alias "_C13_HeapWipe@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HeapWipeDPM Lib "C13W32.DLL" Alias "_C13_HeapWipeDPM@4" (ByVal handleval As Long) As Long
Public Declare Function C13_HPMAddrRd Lib "C13W32.DLL" Alias "_C13_HPMAddrRd@4" (ByVal handleval As Long) As Integer
Public Declare Function C13_HPMAddrWr Lib "C13W32.DLL" Alias "_C13_HPMAddrWr@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMCtrlRd Lib "C13W32.DLL" Alias "_C13_HPMCtrlRd@4" (ByVal handleval As Long) As Byte
Public Declare Function C13_HPMCtrlWr Lib "C13W32.DLL" Alias "_C13_HPMCtrlWr@8" (ByVal value As Byte, ByVal handleval As Long) As Long
Public Declare Function C13_HPMDataRd Lib "C13W32.DLL" Alias "_C13_HPMDataRd@4" (ByVal handleval As Long) As Integer
Public Declare Function C13_HPMDataRds Lib "C13W32.DLL" Alias "_C13_HPMDataRds@12" (ByRef valueptr As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMDataWr Lib "C13W32.DLL" Alias "_C13_HPMDataWr@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMDataWrs Lib "C13W32.DLL" Alias "_C13_HPMDataWrs@12" (ByRef valueptr As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMRdL Lib "C13W32.DLL" Alias "_C13_HPMRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMRdsL Lib "C13W32.DLL" Alias "_C13_HPMRdsL@16" (ByRef valueptr As Long, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HPMRdsW Lib "C13W32.DLL" Alias "_C13_HPMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HPMRdW Lib "C13W32.DLL" Alias "_C13_HPMRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_HPMWrL Lib "C13W32.DLL" Alias "_C13_HPMWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_HPMWrsL Lib "C13W32.DLL" Alias "_C13_HPMWrsL@16" (ByRef valueptr As Long, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HPMWrsW Lib "C13W32.DLL" Alias "_C13_HPMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_HPMWrW Lib "C13W32.DLL" Alias "_C13_HPMWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_IntClear Lib "C13W32.DLL" Alias "_C13_IntClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntConfig Lib "C13W32.DLL" Alias "_C13_IntConfig@12" (ByVal configval As Integer, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_IntDisable Lib "C13W32.DLL" Alias "_C13_IntDisable@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntEnable Lib "C13W32.DLL" Alias "_C13_IntEnable@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntEnableCond Lib "C13W32.DLL" Alias "_C13_IntEnableCond@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntGet Lib "C13W32.DLL" Alias "_C13_IntGet@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntInstall Lib "C13W32.DLL" Alias "_C13_IntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C13_IntRd Lib "C13W32.DLL" Alias "_C13_IntRd@12" (ByRef typevalval As Integer, ByRef infoval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_IntReset Lib "C13W32.DLL" Alias "_C13_IntReset@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntStatus Lib "C13W32.DLL" Alias "_C13_IntStatus@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IntUninstall Lib "C13W32.DLL" Alias "_C13_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function C13_IORdW Lib "C13W32.DLL" Alias "_C13_IORdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_IOWINRdW Lib "C13W32.DLL" Alias "_C13_IOWINRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_IOWINWrW Lib "C13W32.DLL" Alias "_C13_IOWINWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_IOWrW Lib "C13W32.DLL" Alias "_C13_IOWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernEnd Lib "C13W32.DLL" Alias "_C13_KernEnd@4" (ByRef vxdptr As Long) As Long
Public Declare Function C13_KernIntClear Lib "C13W32.DLL" Alias "_C13_KernIntClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_KernIntInstall Lib "C13W32.DLL" Alias "_C13_KernIntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernIntParam Lib "C13W32.DLL" Alias "_C13_KernIntParam@32" (ByVal clraddr As Long, ByVal clrwidth As Long, ByVal clrvalue As Long, ByVal stataddr As Long, ByVal statwidth As Long, ByVal statvalue As Long, ByVal statmask As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernIntStatus Lib "C13W32.DLL" Alias "_C13_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernIntUninstall Lib "C13W32.DLL" Alias "_C13_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function C13_KernIORdB Lib "C13W32.DLL" Alias "_C13_KernIORdB@12" (ByRef valueptr As Byte, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernIOWrB Lib "C13W32.DLL" Alias "_C13_KernIOWrB@12" (ByVal value As Byte, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMCopyB Lib "C13W32.DLL" Alias "_C13_KernMEMCopyB@12" (ByRef destptr As Long, ByRef srcptr As Long, ByVal countval As Integer) As Long
Public Declare Function C13_KernMEMFillW Lib "C13W32.DLL" Alias "_C13_KernMEMFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMRdB Lib "C13W32.DLL" Alias "_C13_KernMEMRdB@16" (ByRef valueptr As Byte, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMRdL Lib "C13W32.DLL" Alias "_C13_KernMEMRdL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMRdsL Lib "C13W32.DLL" Alias "_C13_KernMEMRdsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMRdsW Lib "C13W32.DLL" Alias "_C13_KernMEMRdsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMRdW Lib "C13W32.DLL" Alias "_C13_KernMEMRdW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMWrB Lib "C13W32.DLL" Alias "_C13_KernMEMWrB@16" (ByVal value As Byte, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMWrL Lib "C13W32.DLL" Alias "_C13_KernMEMWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMWrsL Lib "C13W32.DLL" Alias "_C13_KernMEMWrsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
